<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <!-- LinearLayout for Buttons -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:backgroundTint="@color/gray"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coin_heading"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/coin"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="137dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/icon_person"
            tools:srcCompat="@drawable/icon_person" />
    </LinearLayout>

    <Button

        android:id="@+id/getCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-25dp"
        android:backgroundTint="@color/orange"
        android:gravity="center"
        android:text="@string/getCoin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <!-- Button 1 -->
        <Button
            android:id="@+id/All"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="All"
            android:textColor="@color/white" />

        <!-- Button 2 -->
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="Academic"
            android:textColor="@color/white" />

        <!-- Button 3 -->
        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="General"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/activity_book_list" />

</LinearLayout>
