<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BookDetailActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bookDetailImage"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/book"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingStart="22dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/bookDetailName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="Introduction To Java"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.162"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:lineHeight="18sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:contentDescription="@string/fav"
                    android:textAlignment="viewEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:srcCompat="@drawable/star_outline_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/loc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bookName_des"
                    app:srcCompat="@drawable/location_on_24" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight=".5"
                    android:text="@string/loc"
                    android:textColor="@color/loc"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.025"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/bookName_des" />

                <TextView
                    android:id="@+id/bookDetailPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/theme"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
            </LinearLayout>

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/gray"
                android:backgroundTint="@color/gray" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:paddingStart="22dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="Details"
                android:textColor="@color/theme"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal"
                android:paddingStart="22dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Author"
                    android:textColor="@color/theme"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookDetailAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ABC"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:paddingStart="22dp"
                android:paddingEnd="25dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Condition"
                    android:textColor="@color/theme"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookDetailCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="UVW"
                    android:textSize="15sp" />


            </LinearLayout>

            <View
                android:id="@+id/view7"
                android:layout_width="wrap_content"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:backgroundTint="@color/gray" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="22dp"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="8dp"
                android:text="Description"
                android:textColor="@color/theme"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/book_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="22dp"
                android:paddingTop="6dp"
                android:paddingEnd="20dp"
                android:paddingBottom="6dp"
                android:text="@string/des"
                android:textAlignment="inherit"
                android:textSize="15sp" />

            <View
                android:id="@+id/viewv"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/gray"
                android:backgroundTint="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/theme"
                    android:onClick="interested"
                    android:text="@string/interested"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/theme"
                    android:onClick="offer"
                    android:text="@string/offer"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>